fix: dialog overflow

--- a/src/components/dialog/default.css
+++ b/src/components/dialog/default.css
@@ -19,10 +19,6 @@
     display: none;
   }
 
-  &:not([data-open]) {
-    overflow: hidden;
-  }
-
   &[data-closed] {
     background-color: transparent;
   }
